manifests/busybeagle/resources/plexpy.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: busybeagle
  name: plexpybb-svc
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
---
apiVersion: v1
kind: Endpoints
metadata:
  namespace: busybeagle
  name: plexpybb-svc
subsets:
  - addresses:
    - ip: 192.168.0.250
    ports:
    - port: 8181
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-plexpybb
  namespace: busybeagle
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - plexpybb.humpingdog.lan
      secretName: plexpybb-tls
  rules:
    - host: plexpybb.humpingdog.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plexpybb-svc
                port:
                  number: 8181
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: external-plexpy-ingress
  namespace: busybeagle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - plexpy.busybeagleplex.com
      secretName: external-plexpy-tls
  rules:
    - host: plexpy.busybeagleplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plexpybb-svc
                port:
                  number: 8181
